--- a/blip.opam
+++ b/blip.opam
@@ -4,7 +4,7 @@ synopsis: "BLIP: Bloom-then-Flip"
 maintainer: "TG x Thoth <*@tg-x.net>"
 authors: ["TG x Thoth <*@tg-x.net>"]
 tags: [ "bloom" "filter" "flip" "" ]
-license: "AGPL-3.0"
+license: "AGPL-3.0-only"
 homepage: "https://github.com/p2pcollab/ocaml-blip"
 doc: "https://p2pcollab.net/doc/ocaml/blip/"
 dev-repo: "git+https://github.com/p2pcollab/ocaml-blip.git"
